@@ -1,6 +1,7 @@
 package com.theplutushome.optimus.service;
 
 import com.theplutushome.optimus.advice.OrderNotFoundException;
+import com.theplutushome.optimus.dto.CustomerDto;
 import com.theplutushome.optimus.dto.DashboardDto;
 import com.theplutushome.optimus.dto.OrdersDto;
 import com.theplutushome.optimus.dto.PaymentOrderDto;
@@ -10,23 +11,15 @@ import com.theplutushome.optimus.repository.OrderRepository;
 import com.theplutushome.optimus.util.JwtUtil;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.IsoFields;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 public class OrdersService {
-    private static final Logger logger = LoggerFactory.getLogger(OrdersService.class);
 
     private OrderRepository orderRepository;
     private JwtUtil jwtUtil;
@@ -85,28 +78,23 @@ public class OrdersService {
     }
 
     public DashboardDto getDashboardData() {
-        logger.info("Fetching all orders from the repository...");
-
         // Fetch all orders
         Iterable<PaymentOrder> orders = orderRepository.findAll();
         List<PaymentOrder> orderList = new ArrayList<>();
         orders.forEach(orderList::add);
-        logger.info("Total orders retrieved: {}", orderList.size());
 
         DashboardDto dashboardDto = new DashboardDto();
 
         // 1. Total Orders
         int totalOrders = orderList.size();
         dashboardDto.setTotalOrders(String.valueOf(totalOrders));
-        logger.info("Total Orders: {}", totalOrders);
 
-        // 2. Total Customers (unique phone numbers)
+        // 2. Total Customers (unique emails)
         Set<String> uniqueCustomers = new HashSet<>();
         for (PaymentOrder order : orderList) {
             uniqueCustomers.add(order.getPhoneNumber());
         }
         dashboardDto.setTotalCustomers(String.valueOf(uniqueCustomers.size()));
-        logger.info("Total Unique Customers: {}", uniqueCustomers.size());
 
         // 3. Total Revenue (sum of amountGHS)
         double totalRevenue = 0.0;
@@ -116,7 +104,6 @@ public class OrdersService {
             }
         }
         dashboardDto.setTotalRevenue(String.valueOf(totalRevenue));
-        logger.info("Total Revenue (GHS): {}", totalRevenue);
 
         // 4. Total Profit (fee * rate)
         double totalProfit = 0.0;
@@ -126,9 +113,8 @@ public class OrdersService {
             }
         }
         dashboardDto.setTotalProfit(String.valueOf(totalProfit));
-        logger.info("Total Profit: {}", totalProfit);
 
-        // 5. Total Week Orders Percentage Increase
+        // 6. Total Week Orders Percentage Increase
         int currentWeekOrders = getOrdersForCurrentWeek(orderList);
         int previousWeekOrders = getOrdersForPreviousWeek(orderList);
         double totalWeekOrdersPercentageIncrease = 0.0;
@@ -137,10 +123,8 @@ public class OrdersService {
                     * 100;
         }
         dashboardDto.setTotalWeekOrdersPercentageIncrease(String.format("%.2f", totalWeekOrdersPercentageIncrease));
-        logger.info("Current Week Orders: {}, Previous Week Orders: {}, Percentage Increase: {}%",
-                currentWeekOrders, previousWeekOrders, totalWeekOrdersPercentageIncrease);
 
-        // 6. Total Week Revenue Percentage Increase
+        // 7. Total Week Revenue Percentage Increase
         double currentWeekRevenue = getRevenueForCurrentWeek(orderList);
         double previousWeekRevenue = getRevenueForPreviousWeek(orderList);
         double totalWeekRevenuePercentageIncrease = 0.0;
@@ -149,10 +133,8 @@ public class OrdersService {
                     * 100;
         }
         dashboardDto.setTotalWeekRevenuePercentageIncrease(String.format("%.2f", totalWeekRevenuePercentageIncrease));
-        logger.info("Current Week Revenue: {}, Previous Week Revenue: {}, Percentage Increase: {}%",
-                currentWeekRevenue, previousWeekRevenue, totalWeekRevenuePercentageIncrease);
 
-        // 7. Total Week Customers Percentage Increase
+        // 8. Total Week Customers Percentage Increase
         int currentWeekCustomers = getUniqueCustomersForCurrentWeek(orderList);
         int previousWeekCustomers = getUniqueCustomersForPreviousWeek(orderList);
         double totalWeekCustomersPercentageIncrease = 0.0;
@@ -162,10 +144,8 @@ public class OrdersService {
         }
         dashboardDto
                 .setTotalWeekCustomersPercentageIncrease(String.format("%.2f", totalWeekCustomersPercentageIncrease));
-        logger.info("Current Week Customers: {}, Previous Week Customers: {}, Percentage Increase: {}%",
-                currentWeekCustomers, previousWeekCustomers, totalWeekCustomersPercentageIncrease);
 
-        // 8. Total Day Profit Percentage Increase
+        // 9. Total Day Profit Percentage Increase
         double currentDayProfit = getProfitForCurrentDay(orderList);
         double previousDayProfit = getProfitForPreviousDay(orderList);
         double totalDayProfitPercentageIncrease = 0.0;
@@ -173,10 +153,8 @@ public class OrdersService {
             totalDayProfitPercentageIncrease = ((currentDayProfit - previousDayProfit) / previousDayProfit) * 100;
         }
         dashboardDto.setTotalDayProfitPercentageIncrease(String.format("%.2f", totalDayProfitPercentageIncrease));
-        logger.info("Current Day Profit: {}, Previous Day Profit: {}, Percentage Increase: {}%",
-                currentDayProfit, previousDayProfit, totalDayProfitPercentageIncrease);
 
-        // 9. Set weekly and monthly data
+        // 10. Set weekly and monthly data (orders, revenue, profit, cost of sales)
         dashboardDto.setWeekOrders(aggregateDataForPeriod(orderList, "week", "orders"));
         dashboardDto.setMonthOrders(aggregateDataForPeriod(orderList, "month", "orders"));
 
@@ -193,16 +171,13 @@ public class OrdersService {
         dashboardDto.setYearCostOfSales(aggregateDataForPeriod(orderList, "year", "costOfSales"));
         dashboardDto.setYearProfit(aggregateDataForPeriod(orderList, "year", "profit"));
 
-        logger.info("Aggregates are successful");
-
-        // 10. Set recent orders (latest 6 orders)
+        System.out.println("I am finally here");
+        // 11. Set recent orders (latest 6 orders)
         List<PaymentOrder> recentOrders = orderList.stream()
                 .sorted(Comparator.comparing(PaymentOrder::getCreatedAt).reversed())
                 .limit(6)
-                .collect(Collectors.toList());
+                .toList();
         dashboardDto.setRecentOrders(recentOrders.stream().map(this::convertToDto).collect(Collectors.toList()));
-
-        logger.info("Dashboard Data Computed Successfully");
 
         return dashboardDto;
     }
@@ -217,7 +192,7 @@ public class OrdersService {
         // Get the current date and calculate the start of the week (Sunday)
         LocalDate today = LocalDate.now();
         LocalDate startOfWeek = today.minusDays(today.getDayOfWeek().getValue() % 7); // Sunday (start of the current
-                                                                                      // week)
+        // week)
 
         // Loop through the orders and calculate based on the period and type
         for (PaymentOrder order : orderList) {
@@ -376,6 +351,7 @@ public class OrdersService {
     }
 
     public OrdersDto convertToDto(PaymentOrder order) {
+        System.out.println("The order id is " + order.getId());
         OrdersDto ordersDto = new OrdersDto();
         ordersDto.setClientReference(order.getClientReference());
         ordersDto.setAmountGHS(order.getAmountGHS());
@@ -395,13 +371,6 @@ public class OrdersService {
     }
 
     public List<PaymentOrderDto> getAllOrders() {
-        // List<PaymentOrder> orderList =
-        // orderRepository.findPaymentOrdersByDeleted(false);
-        // if (orderList.isEmpty()) {
-        // return null;
-        // }
-        // return
-        // orderList.stream().map(this::convertToDto).collect(Collectors.toList());
         return orderRepository.findAllByDeleted(false);
     }
 
@@ -417,7 +386,72 @@ public class OrdersService {
             } else if (order.getStatus() != PaymentOrderStatus.COMPLETED) {
                 order.setStatus(PaymentOrderStatus.FAILED);
             }
-            orderRepository.save(order);
+
+            if (null != order.getPhoneNumber() && order.getPhoneNumber().startsWith("0")) {
+                {
+                    order.setPhoneNumber(order.getPhoneNumber().replaceFirst("0", "233"));
+                }
+                orderRepository.save(order);
+            }
+
+
         }
+    }
+
+
+    public List<CustomerDto> getCustomers() {
+        // Fetch orders
+        Iterable<PaymentOrder> orders = orderRepository.findAll();
+        List<PaymentOrder> orderList = new ArrayList<>();
+        orders.forEach(orderList::add);
+
+        // Filter and modify orders in one step
+        orderList = orderList.stream()
+                .filter(order -> order.getStatus() == PaymentOrderStatus.COMPLETED && order.getPhoneNumber() != null)
+                .peek(order -> {
+                    // Modify phone numbers if they start with "0"
+                    if (order.getPhoneNumber().startsWith("0")) {
+                        order.setPhoneNumber(order.getPhoneNumber().replaceFirst("0", "233"));
+                        orderRepository.save(order); // Save once after modification
+                    }
+                })
+                .collect(Collectors.toList());
+
+        // Create customer DTOs
+        List<CustomerDto> customers = new ArrayList<>();
+        Map<String, CustomerDto> customerMap = new HashMap<>();
+
+        // Generate customer DTOs, making sure to find the first and last purchase
+        for (PaymentOrder order : orderList) {
+            String phone = order.getPhoneNumber();
+            // Avoid duplicate customer entries based on phone number
+            if (!customerMap.containsKey(phone)) {
+                CustomerDto customer = getCustomerDto(order, orderList, phone);
+                customers.add(customer);
+                customerMap.put(phone, customer); // Add to map to avoid duplicates
+            }
+        }
+
+        return customers;
+    }
+
+    private static CustomerDto getCustomerDto(PaymentOrder order, List<PaymentOrder> orderList, String phone) {
+        int purchases = 0;
+        double totalSpent = order.getAmountGHS();
+        String first_purchase = order.getCreatedAt().toString();
+        String last_purchase = order.getCreatedAt().toString();
+        for (PaymentOrder order2 : orderList) {
+            if (order2.getPhoneNumber().equals(phone)) {
+                purchases++;
+                totalSpent += order2.getAmountGHS();
+                if (order2.getCreatedAt().isBefore(order.getCreatedAt())) {
+                    first_purchase = order2.getCreatedAt().toString();
+                }
+                if (order2.getCreatedAt().isAfter(order.getCreatedAt())) {
+                    last_purchase = order2.getCreatedAt().toString();
+                }
+            }
+        }
+        return new CustomerDto(phone, purchases, totalSpent, first_purchase, last_purchase);
     }
 }
